typescript/checker/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1095,
        ),
        hi: BytePos(
            1096,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:42:5
   |
42 | var c: C;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1111,
        ),
        hi: BytePos(
            1115,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:43:10
   |
43 | var r = c.foo(1); // error
   |          ^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1136,
        ),
        hi: BytePos(
            1137,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:45:5
   |
45 | var d: D<number>;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1161,
        ),
        hi: BytePos(
            1165,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:46:11
   |
46 | var r2 = d.foo(2); // error
   |           ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1192,
        ),
        hi: BytePos(
            1196,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:48:11
   |
48 | var r3 = C.foo(1); // error
   |           ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1221,
        ),
        hi: BytePos(
            1225,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/memberFunctionsWithPrivateOverloads.ts:49:11
   |
49 | var r4 = D.bar(''); // error
   |           ^^^^

